[gd_scene load_steps=17 format=2]

[ext_resource path="res://source/scenes/objects/tile_balsa.tscn" type="PackedScene" id=1]
[ext_resource path="res://source/scripts/Cursor.gd" type="Script" id=2]
[ext_resource path="res://source/scripts/Camera.gd" type="Script" id=3]
[ext_resource path="res://source/scenes/objects/demo_a.tscn" type="PackedScene" id=4]
[ext_resource path="res://source/scenes/objects/demo_b.tscn" type="PackedScene" id=5]
[ext_resource path="res://source/scripts/EditorControl.gd" type="Script" id=6]
[ext_resource path="res://source/scripts/Game.gd" type="Script" id=7]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="Shader" id=4]
code = "/*
	魔法防御シェーダー 2 by あるる（きのもと 結衣）
	Magical Shield Shader 2 by Yui Kinomoto @arlez80

	MIT License
*/

shader_type spatial;
render_mode unshaded, depth_draw_never;

uniform vec4 barrier_color : hint_color = vec4( 0.05, 1.0, 0.5, 1.0 );
uniform float barrier_force = 1.0;
uniform float barrier_interval = 50.0;
uniform float barrier_speed = 10.0;

void fragment( )
{
	vec3 v = ( CAMERA_MATRIX * vec4( VERTEX, 1.0 ) ).xyz;
	float f = sin( v.y * barrier_interval + TIME * barrier_speed );
	ALBEDO = barrier_color.rgb;
	ALPHA = clamp( ( 1.0 - dot( NORMAL, VIEW ) ) * f * barrier_force, 0.0, 1.0 );
}
"

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 4 )
shader_param/barrier_color = Color( 0.266667, 0.937255, 0.231373, 1 )
shader_param/barrier_force = 1.0
shader_param/barrier_interval = 1.0
shader_param/barrier_speed = 3.0

[sub_resource type="SphereMesh" id=8]
radius = 0.5
height = 1.0
radial_segments = 32
rings = 1
is_hemisphere = true

[sub_resource type="SpatialMaterial" id=9]
albedo_color = Color( 0.266667, 0.937255, 0.231373, 1 )

[sub_resource type="BoxShape" id=2]

[sub_resource type="BoxShape" id=7]

[sub_resource type="ViewportTexture" id=6]
viewport_path = NodePath("Cursor/CanvasLayer/Viewport")

[sub_resource type="SphereShape" id=3]

[node name="Spatial" type="Spatial"]
pause_mode = 2
script = ExtResource( 7 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 6, 0 )
light_color = Color( 1, 0.992157, 0.917647, 1 )
shadow_enabled = true
shadow_color = Color( 0.266667, 0.513726, 0.607843, 1 )

[node name="Cursor" type="KinematicBody" parent="."]
pause_mode = 1
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )
objects = [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 1 ) ]

[node name="MeshInstance" type="MeshInstance" parent="Cursor"]
transform = Transform( 1.01, 0, 0, 0, 1.01, 0, 0, 0, 1.01, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 5 )

[node name="MeshInstance" type="MeshInstance" parent="Cursor/MeshInstance"]
transform = Transform( 0.9, 0, 0, 0, -0.9, 7.86805e-08, 0, -7.86805e-08, -0.9, 0, 1.9802, 0 )
mesh = SubResource( 8 )
skeleton = NodePath("../..")
material/0 = SubResource( 9 )

[node name="CollisionShape" type="CollisionShape" parent="Cursor"]
shape = SubResource( 2 )

[node name="Area" type="Area" parent="Cursor"]
transform = Transform( 0.9, 0, 0, 0, 0.9, 0, 0, 0, 0.9, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Cursor/Area"]
shape = SubResource( 7 )

[node name="Tween" type="Tween" parent="Cursor"]

[node name="CanvasLayer" type="CanvasLayer" parent="Cursor"]

[node name="Viewport" type="Viewport" parent="Cursor/CanvasLayer"]
size = Vector2( 256, 256 )
own_world = true
transparent_bg = true
msaa = 2
render_target_v_flip = true

[node name="Camera" type="Camera" parent="Cursor/CanvasLayer/Viewport"]
transform = Transform( -0.707107, 0.353553, -0.612372, 0, 0.866025, 0.5, 0.707107, 0.353553, -0.612372, -8, 6.5, -8 )
fov = 25.0

[node name="DirectionalLight" type="DirectionalLight" parent="Cursor/CanvasLayer/Viewport"]
transform = Transform( 0.9656, -0.225545, -0.129409, 0.0713402, -0.248793, 0.965926, -0.250055, -0.94193, -0.224144, 0, 6, 0 )

[node name="MarginContainer" type="MarginContainer" parent="Cursor/CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32

[node name="TextureRect" type="TextureRect" parent="Cursor/CanvasLayer/MarginContainer"]
margin_left = 640.0
margin_top = 440.0
margin_right = 768.0
margin_bottom = 568.0
rect_min_size = Vector2( 128, 128 )
size_flags_horizontal = 8
size_flags_vertical = 8
texture = SubResource( 6 )
expand = true

[node name="SpringArm" type="SpringArm" parent="."]
pause_mode = 1
collision_mask = 2
shape = SubResource( 3 )
spring_length = 15.0
script = ExtResource( 3 )

[node name="Camera" type="Camera" parent="SpringArm"]
transform = Transform( 1, 0, 0, 0, 0.996195, 0.0871558, 0, -0.0871558, 0.996195, 0, 0, 0 )
fov = 45.0
far = 1024.0

[node name="Tween" type="Tween" parent="SpringArm"]
playback_process_mode = 0

[node name="Level" type="Spatial" parent="."]

[node name="Blank" type="Spatial" parent="Level"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
pause_mode = 2
visible = false
script = ExtResource( 6 )

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/MarginContainer"]
margin_left = 32.0
margin_top = 32.0
margin_right = 768.0
margin_bottom = 568.0
color = Color( 0, 0, 0, 0.501961 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MarginContainer/ColorRect/VBoxContainer"]
margin_right = 736.0
margin_bottom = 88.0
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32

[node name="LineEdit" type="LineEdit" parent="CanvasLayer/MarginContainer/ColorRect/VBoxContainer/MarginContainer"]
margin_left = 32.0
margin_top = 32.0
margin_right = 704.0
margin_bottom = 56.0
placeholder_text = "Level Name"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer/ColorRect/VBoxContainer"]
margin_top = 92.0
margin_right = 736.0
margin_bottom = 536.0
size_flags_vertical = 3
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MarginContainer/ColorRect/VBoxContainer/HBoxContainer"]
margin_right = 366.0
margin_bottom = 444.0
size_flags_horizontal = 3
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32

[node name="LevelsList" type="VBoxContainer" parent="CanvasLayer/MarginContainer/ColorRect/VBoxContainer/HBoxContainer/MarginContainer"]
margin_left = 32.0
margin_top = 32.0
margin_right = 334.0
margin_bottom = 412.0

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/MarginContainer/ColorRect/VBoxContainer/HBoxContainer"]
margin_left = 370.0
margin_right = 736.0
margin_bottom = 444.0
size_flags_horizontal = 3
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer/ColorRect/VBoxContainer/HBoxContainer/MarginContainer2"]
margin_left = 32.0
margin_top = 32.0
margin_right = 334.0
margin_bottom = 412.0
custom_constants/separation = 32
alignment = 1

[node name="ButtonSave" type="Button" parent="CanvasLayer/MarginContainer/ColorRect/VBoxContainer/HBoxContainer/MarginContainer2/VBoxContainer"]
margin_top = 128.0
margin_right = 302.0
margin_bottom = 148.0
text = "Save"

[node name="ButtonLoad" type="Button" parent="CanvasLayer/MarginContainer/ColorRect/VBoxContainer/HBoxContainer/MarginContainer2/VBoxContainer"]
margin_top = 180.0
margin_right = 302.0
margin_bottom = 200.0
text = "Load"

[node name="ButtonClear" type="Button" parent="CanvasLayer/MarginContainer/ColorRect/VBoxContainer/HBoxContainer/MarginContainer2/VBoxContainer"]
margin_top = 232.0
margin_right = 302.0
margin_bottom = 252.0
text = "Clear"

[node name="ButtonClose" type="Button" parent="CanvasLayer/MarginContainer/ColorRect/VBoxContainer/HBoxContainer/MarginContainer2/VBoxContainer"]
margin_top = 232.0
margin_right = 302.0
margin_bottom = 252.0
text = "Close"

[connection signal="button_down" from="CanvasLayer/MarginContainer/ColorRect/VBoxContainer/HBoxContainer/MarginContainer2/VBoxContainer/ButtonSave" to="CanvasLayer" method="_on_ButtonSave_button_down"]
[connection signal="button_down" from="CanvasLayer/MarginContainer/ColorRect/VBoxContainer/HBoxContainer/MarginContainer2/VBoxContainer/ButtonLoad" to="CanvasLayer" method="_on_ButtonLoad_button_down"]
[connection signal="button_down" from="CanvasLayer/MarginContainer/ColorRect/VBoxContainer/HBoxContainer/MarginContainer2/VBoxContainer/ButtonClear" to="CanvasLayer" method="_on_ButtonClear_button_down"]
[connection signal="button_up" from="CanvasLayer/MarginContainer/ColorRect/VBoxContainer/HBoxContainer/MarginContainer2/VBoxContainer/ButtonClose" to="CanvasLayer" method="_on_ButtonClose_button_up"]
